# find-free-lunch

./: .gitignore  BaseBenchmark.py  Benchmark.py  ClassificationBenchmark.py  README.md  RegressionBenchmark.py  pyproject.toml  sample.ipynb  setup.py
ffl/: ClassificationBenchmark.py  RegressionBenchmark.py  params.py
sample/: sample.ipynb
