[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "find_free_lunch"
version = "0.0.2"
authors = [
  { name="Aaditya Thakur" },
]
description = "Quickly benchmark and find the best model for your dataset"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aadi-1024/find-free-lunch"
"Bug Tracker" = "https://github.com/aadi-1024/find-free-lunch/issues"

[tool.setuptools]
packages = ["ffl"]
